--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ footer {
   padding: 15px;
   margin-top: 40px;
 }
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
