--- a/style.css
+++ b/style.css
@@ -72,3 +72,12 @@ textarea {
   border-radius: 5px;
   border: 1px solid #ccc;
 }
+
+h3 {
+  margin-bottom: 5px;
+  color: #1f2933;
+}
+
+section p {
+  margin: 5px 0;
+}
