--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .hero {
-  background: url("bg.jpg") center center / cover no-repeat;
+  background: url("bg.jpeg") center center / cover no-repeat;
   height: 100vh;
   position: relative;
 }
