--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* 🔑 STOP SCROLL */
+  font-family: Poppins;
 }
 
 main {
