--- a/style.css
+++ b/style.css
@@ -7,12 +7,10 @@
   box-sizing: border-box;
 }
 
-html,
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden; /* 🔑 STOP SCROLL */
-  font-family: Poppins;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 main {
@@ -77,7 +75,7 @@ aside li i {
 
 .home-slide {
   color: white;
-  display: flex;
+  display: flex !important;
   background-color: #343a40;
 }
 
