--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -544,4 +544,21 @@ form h2 .SocialLinks i:hover {
   .mySwiper {
     width: 100vw !important;
   }
+}
+
+/* All slides fixed */
+.swiper-slide {
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* Slides that can scroll internally */
+.about-us,
+.contactMe,
+.services,
+.gallery {
+  height: 100%;
+  overflow-y: auto;
+  overscroll-behavior: contain;
+  padding-bottom: 100px;
 }
