--- a/style.css
+++ b/style.css
@@ -562,3 +562,8 @@ form h2 .SocialLinks i:hover {
   overscroll-behavior: contain;
   padding-bottom: 100px;
 }
+
+.about-us,
+.contactMe {
+  scroll-behavior: smooth;
+}
