--- a/style.css
+++ b/style.css
@@ -822,3 +822,9 @@ form h2 .SocialLinks i:hover {
   outline: none;
   border: 1px solid #80ed99;
 }
+
+.contactMe {
+  transform: none !important;
+  visibility: visible !important;
+  pointer-events: auto !important;
+}
