--- a/style.css
+++ b/style.css
@@ -823,8 +823,8 @@ form h2 .SocialLinks i:hover {
   border: 1px solid #80ed99;
 }
 
-/* .contactMe {
+.contactMe {
   transform: none !important;
   visibility: visible !important;
   pointer-events: auto !important;
-} */
+}
