--- a/style.css
+++ b/style.css
@@ -826,3 +826,16 @@ form h2 .SocialLinks i:hover {
   z-index: 10;
 }
 /* === */
+.contactMe {
+  overflow-y: auto;
+  height: 100%;
+}
+
+.contactMe form,
+.contactMe input,
+.contactMe textarea,
+.contactMe button {
+  pointer-events: auto;
+  z-index: 9999;
+  position: relative;
+}
