--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ aside {
   flex-direction: column;
   height: 100%;
   font-size: 1.1rem;
-  background-color: #212529;
+  background-color: #000000;
   backdrop-filter: blur(20px);
+  border-right: 1px solid #80ed9970;
 }
 
 .Links {
@@ -76,7 +77,7 @@ aside li i {
 .home-slide {
   color: white;
   display: flex !important;
-  background-color: #343a40;
+  background-color: #000000;
 }
 
 .HomeContent {
@@ -201,13 +202,13 @@ aside li i {
   width: 80vw;
   height: 100vh;
   overflow: hidden;
-  background-color: #343a40;
+  background-color: #000000;
 }
 
 .swiper-slide {
   width: 100%;
 
-  background-color: #343a40;
+  background-color: #000000;
   height: 100%;
 }
 
