--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ aside {
   border-right: 1px solid #80ed9970;
 }
 
-.swiper-3d .swiper-wrapper {
+.swiper-3d .swiper-wrapper .swiper-slide {
   border-bottom: 1px solid #80ed9970 !important;
 }
 
